# auto_order_bot

./: .env.example  .gitignore  README.md  config.json  fetch_market_snapshots.py  half_box_arbitrage.py  lighter_market_id.json  main.py  requirements.txt
auto_order_rust/: .env.example  Cargo.toml  README.md
auto_order_rust/src/: config.rs  main.rs  models.rs  strategy.rs
auto_order_rust/src/exchanges/: binance.rs  bybit.rs  gateio.rs  mod.rs  okx.rs
auto_order_rust/static/: index.html
sdks/: __init__.py  base_contract_sdk.py  binance_contract_sdk.py  bybit_contract_sdk.py  gateio_contract_sdk.py  lighter_contract_sdk.py  okx_contract_sdk.py
static/: index.html
tests/: test_binance_contract_sdk.py  test_fetch_market_snapshots.py  test_gateio_contract_sdk.py  test_main.py
